feature img fixed

--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
     </div>
     </header>
     <section id="top">
-        <div class="pattern"></div>
+        <div class="pattern filter"></div>
         <video src="images/top_movie.mp4"　alt="images/top_sp.jpg" autoplay loop>
-          <img src="images/top_sp.jpg" alt="Placeholder">
         </video>
         <div class="wrapper">
         <div class="inner-bg">
@@ -66,7 +65,7 @@
           <p class="about-top"><img src="images/logo-white.png" class="logo-name" alt="logo-name" width="180px">とは</p>
           <h3 class="about-text">
             手で持ち歩けるサイズのビーコンを活用した<br>
-            自撮棒も撮影係も不要の自撮りスポット提供サービス<br>
+            自撮棒も撮影係も不要の自撮りスポット提供サービス。<br>
             ボタンを押すだけで遠景からの自撮や集合写真が思いのまま</h3>
         </div>
         <div class="youtube">
@@ -78,23 +77,23 @@
           <div class="step-box">
             <img src="images/camera.png" class="step-img">
             <div class="box-title">カメラを設置する</div>
-            <p class="box-content">専用アプリを搭載した端末を観光地やイベント会場に設置</p>
+            <p class="box-content">専用アプリを搭載した端末を会場に設置します</p>
           </div>
           <div class="step-box">
             <img src="images/push.png" class="step-img">
             <div class="box-title">ボタンを押す</div>
-            <p class="box-content">メールアドレスを登録し、撮影したい時にボタンを押すだけ。<br>設置されているカメラで自撮り体験を楽しんでいただきます。</p>
+            <p class="box-content">メールアドレスを登録し、撮影したい時にボタンを押すだけ。設置されているカメラで自撮り体験を楽しめます</p>
           </div>
           <div class="step-box">
             <img src="images/sending.png" class="step-img">
             <div class="box-title">写真が届く</div>
-            <p class="box-content">ボタンを押した時の写真が届きアルバムでご覧になれます。<br>一緒にボタンを押した人と自動で共有されます</p>
+            <p class="box-content">ボタンを押すとすぐに写真が届き、ウェブ上のアルバムでもご覧になれます。同時にボタンを押した人とは自動で写真がそれぞれに共有されます</p>
           </div>
         </div>
       </div>
     </section>
     <section id="features">
-      <h3 class="heading">Features</h3>
+      <h2 class="heading">Features</h2>
       <div class="feature-wrapper">
         <div class="feature-1 fea">
           <div class="inner">
@@ -134,7 +133,7 @@
           <div class="case-box">
             <img src="images/event.png" class="case-img event">
             <div class="box-title">イベント</div>
-            <p class="box-content text">ourshotなら連絡先の交換といったわずらわしさが無く写真を共有できるので、施設内の壁や天井に、皆が楽しめる一味違ったフォトブースを簡単に設置することができます</p>
+            <p class="box-content text">ourshotなら連絡先の交換といったわずらわしさが無く写真を共有できるので、施設内の壁や天井など、皆が楽しめる一味違ったフォトブースを簡単に設置することができます</p>
           </div>
         </div>
       </div>
@@ -169,7 +168,7 @@
                 </div>
               </li>
               <li class="faq-list-item">
-                <h3 class="question">Q：撮影端末はiPhoneにも対応していますか？</h3>
+                <h3 class="question">Q：iPhoneは撮影端末として対応していますか？</h3>
                 <span>+</span>
                 <div class="answer">
                   <p>現在、対応機種はAndroid端末のみとなります。<br>弊社からSIMカード入りの端末のレンタルも行っておりますので、気軽にご利用が可能です</p>
@@ -182,9 +181,9 @@
     </section>
     <section id="contact">
       <div class="wrapper">
-        <h3 class="heading">Contact</h3>
+        <h2 class="heading">Contact</h2>
         <div class="contact-wrapper filter">
-          <h3 class="service-title shadow liner">あなたのスポットにも導入しませんか？<br>ourshotはトラベラーや来客者に<br>最高の思い出を提供するサポートを致します</h3>
+          <h3 class="service-title shadow liner">あなたのスポットにも導入しませんか？<br>ourshotはトラベラーや来客者に<br>最高の思い出をつくる機会を提供いたします</h3>
           <p class=" service-content shadow">2016年秋リリース<br>現在モニター企業様・自治体様を募集しております</p>
           <div class="general-button">
             <a href="https://1lejend.com/stepmail/kd.php?no=UqpgJqOc" target="_blank">
