--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
     </header>
     <section id="top">
         <div class="pattern filter"></div>
-        <video src="images/top_movie.mp4"　alt="images/top_sp.jpg" autoplay loop>
-        </video>
+        <div class="top-wrapper">
+          <video src="images/top_movie.mp4"　alt="images/top_sp.jpg" autoplay loop>
+          </video>
+        </div>
         <div class="wrapper">
         <div class="inner-bg">
           <h1 class="shadow type">Just Push<br>the Button<br>to create<br>an exciting memory</p>
