--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ourshot</title>
+    <title>ourshot - アワーショット</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
     <meta property="fb:app_id" content="483671421838570">
@@ -24,6 +24,14 @@
     <link href="pace-theme-barber-shop.css" rel="stylesheet">
     <script src="js/pace.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-51317198-4', 'auto');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body>
     <header class="header">
@@ -185,7 +193,7 @@
       <div class="wrapper">
         <h2 class="heading">Contact</h2>
         <div class="contact-wrapper filter">
-          <h3 class="service-title shadow liner">あなたのスポットにも導入しませんか？<br>ourshotはトラベラーや来客者に<br>最高の思い出をつくる機会を提供いたします</h3>
+          <h3 class="service-title shadow">あなたのスポットにも導入しませんか？<br>ourshotはトラベラーや来客者に<br>最高の思い出をつくる機会を提供いたします</h3>
           <p class=" service-content shadow">2016年秋リリース<br>現在モニター企業様・自治体様を募集しております</p>
           <div class="general-button">
             <a href="https://1lejend.com/stepmail/kd.php?no=UqpgJqOc" target="_blank">
