add faq add number to step

--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@
         <div class="step-wrapper">
           <div class="step-box">
             <img src="images/camera.png" class="step-img">
-            <div class="box-title">カメラを設置する</div>
+            <div class="box-title">1.カメラを設置する</div>
             <p class="box-content">専用アプリを搭載した端末を会場に設置します</p>
           </div>
           <div class="step-box">
             <img src="images/push.png" class="step-img">
-            <div class="box-title">ボタンを押す</div>
+            <div class="box-title">2.ボタンを押す</div>
             <p class="box-content">メールアドレスを登録し、撮影したい時にボタンを押すだけ。設置されているカメラで自撮り体験を楽しめます</p>
           </div>
           <div class="step-box">
             <img src="images/sending.png" class="step-img">
-            <div class="box-title">写真が届く</div>
+            <div class="box-title">3.写真が届く</div>
             <p class="box-content">ボタンを押すとすぐに写真が届き、ウェブ上のアルバムでもご覧になれます。同時にボタンを押した人とは自動で写真がそれぞれに共有されます</p>
           </div>
         </div>
@@ -138,7 +138,7 @@
           <div class="case-box">
             <img src="images/travel.png" class="case-img travel">
             <div class="box-title">トラベル</div>
-            <p class="box-content text">ourshotがあればオススメのビュースポットに簡単にフォトスポットを作ることが可能です。トラベラーには遠隔でシャターを押せるカード型ビーコンと撮影ポイントの地図を渡すだけ。旅行時の思い出をまとめてフォトブックに出力いただくことも可能です</p>
+            <p class="box-content text">ourshotがあればオススメのビュースポットに簡単にフォトスポットを作ることが可能です。トラベラーには遠隔でシャッターを押せるカード型ビーコンと撮影ポイントの地図を渡すだけ。旅行時の思い出をまとめてフォトブックに出力いただくことも可能です</p>
           </div>
           <div class="case-box">
             <img src="images/event.png" class="case-img event">
@@ -155,7 +155,7 @@
           <div class="faq">
             <ul id="faq-list">
               <li class="faq-list-item">
-                <h3 class="question">Q：どこで利用できますか？</h3>
+                <h3 class="question">Q.どこで利用できますか？</h3>
                 <span>+</span>
                 <div class="answer">
                   <p>ourshotと提携している観光地、施設、イベント会場で入手していただきます。<br>
@@ -164,24 +164,31 @@
                 </div>
               </li>
               <li class="faq-list-item">
-                <h3 class="question">Q：撮影されたデータはどうなりますか？</h3>
+                <h3 class="question">Q.撮影されたデータはどうなりますか？</h3>
                 <span>+</span>
                 <div class="answer">
                   <p>設置されたスマホではデータを保存しません。<br>ダイレクトに登録されたメールアドレスへ送付しますので自分の写真や個人情報は残りません。<br>また、登録されたメールアドレスについても弊社がクラウド上で管理しておりますので、設置されたスマホには一切個人情報は残りません</p>
                 </div>
               </li>
               <li class="faq-list-item">
-                <h3 class="question">Q：単発のイベントで利用できますか？</h3>
+                <h3 class="question">Q.単発のイベントで利用できますか？</h3>
                 <span>+</span>
                 <div class="answer">
                   <p>期間レンタルから単発イベントへのレンタルまで幅広くサービス提供することが可能です。<br>カード型デバイスの電池は１〜２年間なので、最長レンタル期間は１年です</p>
                 </div>
               </li>
               <li class="faq-list-item">
-                <h3 class="question">Q：iPhoneは撮影端末として対応していますか？</h3>
+                <h3 class="question">Q.iPhoneは撮影端末として対応していますか？</h3>
                 <span>+</span>
                 <div class="answer">
                   <p>現在、対応機種はAndroid端末のみとなります。<br>弊社からSIMカード入りの端末のレンタルも行っておりますので、気軽にご利用が可能です</p>
+                </div>
+              </li>
+              <li class="faq-list-item">
+                <h3 class="question">Q.メールアドレスはどうやって設定しますか？</h3>
+                <span>+</span>
+                <div class="answer">
+                  <p>現在、個人向けの販売はしておりません。<br>観光地やイベント会場でレンタルしていただく際にご登録をしていただきます。<br>例えば登山地であれば登山口の受付でデバイスを受け取り、<br>メールアドレスを登録していただく流れになります。</p>
                 </div>
               </li>
             </ul>
