--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type"   content="website">
     <meta property="og:url"    content="http://ourshot.net/">
     <meta property="og:title"  content="ourshot | Just push the button to create an exciting memory">
-    <meta property="og:image"  content="http://ourshot.net/images/facebook_image.jpg">
+    <meta property="og:image"  content="http://ourshot.net/images/top.jpg">
     <meta property="og:description"  content="観光地やイベント会場で、もう自撮棒や撮影係は不要？ボタンを押すだけで広角自撮も集合写真も思いのまま！自動でシェアもできちゃうIoTデバイスサービスourshot!! #ourshot" />
     <meta property="og:site_name"  content="ourshot">
     <link rel="shortcut icon" href="images/logo-icon.ico.png">
@@ -218,7 +218,7 @@
       <footer class="main_footer">
     		<div class="container">
           <div class="footer_logo_ourshot"><a href="#top"><img src="images/footer_logo.png" alt="Logo"></a></div>
-    			<div class="footer_logo"><a href="http://www.hackcamp.jp/"><img src="images/produced-by-HC.png" alt="HackCamp logomark"></a></div>
+    			<div class="footer_logo"><a href="http://www.hackcamp.jp/"><img src="images/HackCamp-icon.png" alt="HackCamp logomark"></a></div>
     			<nav class="footer_nav">
     				<ul>
     					<li><a href="#top">ホーム</a></li>
