--- a/index.html
+++ b/index.html
@@ -137,13 +137,17 @@
         <div class="case-wrapper">
           <div class="case-box">
             <img src="images/travel.png" class="case-img travel">
-            <div class="box-title">トラベル</div>
-            <p class="box-content text">ourshotがあればオススメのビュースポットに簡単にフォトスポットを作ることが可能です。トラベラーには遠隔でシャッターを押せるカード型ビーコンと撮影ポイントの地図を渡すだけ。旅行時の思い出をまとめてフォトブックに出力いただくことも可能です</p>
+            <div class="case-contents">
+              <div class="box-title">トラベル</div>
+              <p class="box-content text">ourshotがあればオススメのビュースポットに簡単にフォトスポットを作ることが可能です。トラベラーには遠隔でシャッターを押せるカード型ビーコンと撮影ポイントの地図を渡すだけ。旅行時の思い出をまとめてフォトブックに出力いただくことも可能です</p>
+            </div>
           </div>
           <div class="case-box">
             <img src="images/event.png" class="case-img event">
-            <div class="box-title">イベント</div>
-            <p class="box-content text">ourshotなら連絡先の交換といったわずらわしさが無く写真を共有できるので、施設内の壁や天井など、皆が楽しめる一味違ったフォトブースを簡単に設置することができます</p>
+            <div class="case-contents">
+              <div class="box-title">イベント</div>
+              <p class="box-content text">ourshotなら連絡先の交換といったわずらわしさが無く写真を共有できるので、施設内の壁や天井など、皆が楽しめる一味違ったフォトブースを簡単に設置することができます</p>
+            </div>
           </div>
         </div>
       </div>
