--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <link href="pace-theme-barber-shop.css" rel="stylesheet">
     <script src="js/pace.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config reset people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
+      for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f)}})(document,window.mixpanel||[]);
+      mixpanel.init("5a13d0fc4700905883ba621b78a6cd46");
+    </script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -63,10 +67,15 @@
         </div>
         <div class="wrapper">
         <div class="inner-bg">
-          <h1 class="shadow type">Just Push<br>the Button<br>to create<br>an exciting memory</p>
+          <h1 class="shadow type">Just Push<br>the Button<br>to create<br>an exciting memory</h1>
+          <div class="top-contact">
+            <p class="service-content shadow">2016年秋サービスリリース予定<br>現在モニター企業様・自治体様を募集中</p>
+            <div class="button-content">
+              <a href="https://1lejend.com/stepmail/kd.php?no=ylTjHSUbGk" target="_blank"><button class="btn">お問い合わせをする</button></a>
+            </div>
+          </div>
         </div>
       </div>
-        <a href="#about" class="scroll"><span></span></a>
     </section>
     <section id="about">
       <div class="wrapper">
@@ -80,7 +89,7 @@
         </div>
         <div class="youtube">
           <div class="movie-wrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/1F0RAvWVRLQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/bQllTXHAACM?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <div class="step-wrapper">
@@ -227,7 +236,7 @@
     				<ul>
     					<li><a href="#top">ホーム</a></li>
     					<li><a href="http://www.hackcamp.jp/#company_info">会社概要</a></li>
-    					<li><a href="https://1lejend.com/stepmail/kd.php?no=UqpgJqOc" target="_blank">お問い合わせ</a></li>
+    					<li><a href="https://1lejend.com/stepmail/kd.php?no=ylTjHSUbGk" target="_blank">お問い合わせ</a></li>
     				</ul>
     			</nav>
     			<small class="copyright">HackCamp © 2016 All Rights Reserved.</small>
