--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
         <div class="youtube">
           <div class="movie-wrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/bQllTXHAACM?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/bQllTXHAACM?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <div class="step-wrapper">
@@ -148,7 +148,7 @@
             <img src="images/travel.png" class="case-img travel">
             <div class="case-contents">
               <div class="box-title">トラベル</div>
-              <p class="box-content text">ourshotがあればオススメのビュースポットに簡単にフォトスポットを作ることが可能です。トラベラーには遠隔でシャッターを押せるカード型ビーコンと撮影ポイントの地図を渡すだけ。旅行時の思い出をまとめてフォトブックに出力いただくことも可能です</p>
+              <p class="box-content text">ourshotがあればオススメの景勝地に簡単にフォトスポットを作ることが可能です。トラベラーには遠隔でシャッターを押せるカード型ビーコンと撮影ポイントの地図を渡すだけ。旅行時の思い出をまとめてフォトブックに出力いただくことも可能です</p>
             </div>
           </div>
           <div class="case-box">
@@ -216,17 +216,13 @@
           <h3 class="service-title shadow">あなたのスポットにも導入しませんか？<br>ourshotはトラベラーや来客者に<br>最高の思い出をつくる機会を提供いたします</h3>
           <p class=" service-content shadow">2016年秋リリース<br>現在モニター企業様・自治体様を募集しております</p>
           <div class="general-button">
-            <a href="https://1lejend.com/stepmail/kd.php?no=UqpgJqOc" target="_blank">
+            <a href="https://1lejend.com/stepmail/kd.php?no=ylTjHSUbGk" target="_blank">
               <div class="button-content">
                 <button class="btn">お問い合わせをする</button>
               </div>
             </a>
           </div>
         </div>
-      </div>
-      <!-- #TODO TOPに戻るボタンの実装 -->
-      <div id="page-top">
-        <a id="move-page-top"><i class="fa fa-chevron-circle-up fa-5x"></i></a>
       </div>
       <footer class="main_footer">
     		<div class="container">
