--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="top-contact">
             <p class="service-content shadow">2016年秋サービスリリース予定<br>現在モニター企業様・自治体様を募集中</p>
             <div class="button-content">
-              <a href="https://1lejend.com/stepmail/kd.php?no=ylTjHSUbGk" target="_blank"><button class="btn">お問い合わせをする</button></a>
+              <a href="https://1lejend.com/stepmail/kd.php?no=ylTjHSUbGk" target="_blank"><button class="btn" id="top-contact-btn">お問い合わせをする</button></a>
             </div>
           </div>
         </div>
