--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           <div class="general-button">
             <a href="https://1lejend.com/stepmail/kd.php?no=ylTjHSUbGk" target="_blank">
               <div class="button-content">
-                <button class="btn">お問い合わせをする</button>
+                <button class="btn" id ="#bottom-contact-btn">お問い合わせをする</button>
               </div>
             </a>
           </div>
