--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
         <div class="youtube">
           <div class="movie-wrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/bQllTXHAACM?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/bQllTXHAACM?enablejsapi=1?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <div class="step-wrapper">
