--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <div class="youtube">
           <div class="movie-wrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/bQllTXHAACM?enablejsapi=1?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" id="YouTube" src="https://www.youtube.com/embed/bQllTXHAACM?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <div class="step-wrapper">
@@ -198,7 +198,7 @@
                 <h3 class="question">Q.メールアドレスはどうやって設定しますか？</h3>
                 <span>▼</span>
                 <div class="answer">
-                  <p>現在、個人向けの販売はしておりません。<br>観光地やイベント会場でレンタルしていただく際にご登録をしていただきます。<br>例えば登山地であれば登山口の受付でデバイスを受け取り、<br>メールアドレスを登録していただく流れになります。</p>
+                  <p>現在、個人向けの販売はしておりません。<br>観光地やイベント会場でレンタルしていただく際にご登録をしていただきます。<br>例えば登山地であれば登山口の受付でデバイスを受け取り、<br>メールアドレスを登録していただく流れになります</p>
                 </div>
               </li>
             </ul>
