--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type"   content="website">
     <meta property="og:url"    content="http://ourshot.net/">
     <meta property="og:title"  content="ourshot | Just push the button to create an exciting memory">
-    <meta property="og:image"  content="http://ourshot.net/images/ogp_image.jpg">
+    <meta property="og:image"  content="http://ourshot.net/images/top.jpg">
     <meta property="og:description"  content="観光地やイベント会場で、もう自撮棒や撮影係は不要？ボタンを押すだけで広角自撮も集合写真も思いのまま！自動でシェアもできちゃうIoTデバイスサービスourshot!! #ourshot" />
     <meta property="og:site_name"  content="ourshot">
     <link rel="shortcut icon" href="images/logo-icon.ico.png"
