--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type"   content="website">
     <meta property="og:url"    content="http://ourshot.net/">
     <meta property="og:title"  content="ourshot | Just push the button to create an exciting memory">
-    <meta property="og:image"  content="http://ourshot.net/images/top.jpg">
+    <meta property="og:image"  content="http://ourshot.net/images/ogp-top.jpg">
     <meta property="og:description"  content="観光地やイベント会場で、もう自撮棒や撮影係は不要？ボタンを押すだけで広角自撮も集合写真も思いのまま！自動でシェアもできちゃうIoTデバイスサービスourshot!! #ourshot" />
     <meta property="og:site_name"  content="ourshot">
     <link rel="shortcut icon" href="images/logo-icon.ico.png"
@@ -65,11 +65,11 @@
         <div class="wrapper">
         <div class="inner-bg">
           <h1 class="shadow type">Just Push<br>the Button<br>to create<br>an exciting memory</h1>
+          </div>
           <div class="top-contact">
             <p class="service-content shadow">2016年秋サービスリリース予定<br>現在モニター企業様・自治体様を募集中</p>
             <div class="button-content">
               <a href="https://1lejend.com/stepmail/kd.php?no=ylTjHSUbGk" target="_blank"><button class="btn" id="top-contact-btn">お問い合わせをする</button></a>
-            </div>
           </div>
         </div>
       </div>
