type wait 3seconds

--- a/index.html
+++ b/index.html
@@ -240,11 +240,9 @@
         $(function(){
           $(".type").t()
         });
-        </script>
-        <script>
           $('.type').t({
             speed:80,
-            speed_vary:true,
+            delay:3
           });
         </script>
     <script src="js/t.min.js"></script>
