--- a/index.html
+++ b/index.html
@@ -234,6 +234,8 @@
     			<small class="copyright">HackCamp © 2016 All Rights Reserved.</small>
     		</div>
   	   </footer>
+       <script type="text/javascript" src="js/script.js"></script>
+       <script type="text/javascript" src="js/t.min.js"></script>
        <script>
         $(function(){
           $(".type").t()
@@ -243,7 +245,5 @@
             delay:3
           });
         </script>
-    <script src="js/t.min.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
