--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
           <div class="faq">
             <ul id="faq-list">
               <li class="faq-list-item">
-                <h3 class="question">Q.どこで利用できますか？</h3>
+                <h3 class="question">Q.どこで体験することができますか？</h3>
                 <span>▼</span>
                 <div class="answer">
                   <p>ourshotと提携している観光地、施設、イベント会場で入手していただきます。<br>
                     提携先施設については今秋頃にアップロード致します。<br>
-                    個人のお客様向けのカード型デバイスの販売は現在準備中です</p>
+                    現段階では、個人向けの販売の予定はありません</p>
                 </div>
               </li>
               <li class="faq-list-item">
