fix footer-logo mixpanel

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <footer class="main_footer">
     		<div class="container">
           <div class="footer_logo_ourshot"><a href="#top"><img src="images/footer_logo.png" alt="Logo"></a></div>
-    			<div class="footer_logo"><a href="http://www.hackcamp.jp/"><img src="images/HackCamp-icon.png" alt="HackCamp logomark"></a></div>
+    			<div class="footer_logo"><a href="http://www.hackcamp.jp/" id="hc-logo"><img src="images/HackCamp-icon.png" alt="HackCamp logomark"></a></div>
     			<nav class="footer_nav">
     				<ul>
     					<li><a href="#top">ホーム</a></li>
