add youtube play mixpanel

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <div class="youtube">
           <div class="movie-wrapper">
-            <iframe width="560" height="315" id="YouTube" src="https://www.youtube.com/embed/bQllTXHAACM?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" id="YouTube" src="https://www.youtube.com/embed/bQllTXHAACM?enablejsapi=1&version=3?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <div class="step-wrapper">
