--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ourshot - アワーショット</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="ourshot,アワーショット,セルフィー,自撮り,リモート,フォトブース,ボタン>
+    <meta name="keywords" content="ourshot,アワーショット,セルフィー,自撮り,リモート,フォトブース,ボタン">
     <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
     <meta property="fb:app_id" content="483671421838570">
     <meta property="og:type"   content="website">
