enable to discliminate FAQ id

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ourshot - アワーショット</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="ourshot,アワーショット,セルフィー,自撮り,リモート,フォトブース,ボタン">
+    <meta name="keywords" content="ourshot,アワーショット,セルフィー,自撮り,リモート,フォトブース,ボタン,シャッター">
     <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
     <meta property="fb:app_id" content="483671421838570">
     <meta property="og:type"   content="website">
@@ -194,28 +194,28 @@
               <li class="faq-list-item">
                 <h3 class="question">Q.撮影されたデータはどうなりますか？</h3>
                 <span>▼</span>
-                <div class="answer">
+                <div class="answer" id="q1">
                   <p>設置されたスマホではデータを保存しません。<br>ダイレクトに登録されたメールアドレスへ送付しますので自分の写真や個人情報は残りません。<br>また、登録されたメールアドレスについても弊社がクラウド上で管理しておりますので、設置されたスマホには一切個人情報は残りません</p>
                 </div>
               </li>
               <li class="faq-list-item">
                 <h3 class="question">Q.単発のイベントで利用できますか？</h3>
                 <span>▼</span>
-                <div class="answer">
+                <div class="answer" id="q2">
                   <p>期間レンタルから単発イベントへのレンタルまで幅広くサービス提供することが可能です。<br>カード型デバイスの電池は１〜２年間なので、最長レンタル期間は１年です</p>
                 </div>
               </li>
               <li class="faq-list-item">
                 <h3 class="question">Q.iPhoneは撮影端末として対応していますか？</h3>
                 <span>▼</span>
-                <div class="answer">
+                <div class="answer" id="q3">
                   <p>現在、対応機種はAndroid端末のみとなります。<br>弊社からSIMカード入りの端末のレンタルも行っておりますので、気軽にご利用が可能です</p>
                 </div>
               </li>
               <li class="faq-list-item">
                 <h3 class="question">Q.メールアドレスはどうやって設定しますか？</h3>
                 <span>▼</span>
-                <div class="answer">
+                <div class="answer" id="q4">
                   <p>現在、個人向けの販売はしておりません。<br>観光地やイベント会場でレンタルしていただく際にご登録をしていただきます。<br>例えば登山地であれば登山口の受付でデバイスを受け取り、<br>メールアドレスを登録していただく流れになります</p>
                 </div>
               </li>
