bottom-button-position fixed

--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
           <p class=" service-content shadow">2016年秋リリース<br>現在モニター企業様・自治体様を募集しております</p>
           <div class="general-button">
             <a href="https://1lejend.com/stepmail/kd.php?no=ylTjHSUbGk" target="_blank">
-              <div class="button-content">
-                <button class="btn" id ="bottom-contact-btn">お問い合わせをする</button>
+              <div class="button-content-bottom">
+                <button class="btn" id ="bottom-contact-btn"　style="margin-left : auto ; margin-right : auto ;">お問い合わせをする</button>
               </div>
             </a>
           </div>
