remove style from bottom-btn

--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
         <h2 class="heading">Contact</h2>
         <div class="contact-wrapper filter">
           <h3 class="service-title shadow">あなたのスポットにも導入しませんか？<br>ourshotはトラベラーや来客者に<br>最高の思い出をつくる機会を提供いたします</h3>
-          <p class=" service-content shadow">2016年秋リリース<br>現在モニター企業様・自治体様を募集しております</p>
+          <p class="bottom-service-content shadow">2016年秋リリース<br>現在モニター企業様・自治体様を募集しております</p>
           <div class="general-button">
             <a href="https://1lejend.com/stepmail/kd.php?no=ylTjHSUbGk" target="_blank">
               <div class="button-content-bottom">
-                <button class="btn" id ="bottom-contact-btn"　style="margin-left : auto ; margin-right : auto ;">お問い合わせをする</button>
+                <button class="btn" id ="bottom-contact-btn">お問い合わせをする</button>
               </div>
             </a>
           </div>
