--- a/index.html
+++ b/index.html
@@ -75,18 +75,18 @@
     </div>
     </header>
     <section id="top">
-        <div class="pattern filter"></div>
-        <div class="top-wrapper">
-          <video src="images/top_movie.mp4"　alt="images/top_sp.jpg" autoplay loop>
-          </video>
-        </div>
-        <div class="wrapper">
-          <div class="inner-bg">
-            <h1 class="shadow type">Just Push<br>the Button<br>to create<br>an exciting memory</h1>
-            <div class="top-contact">
-              <p class="service-content shadow">2016年秋サービスリリース予定<br>現在モニター企業様・自治体様を募集中</p>
-              <div class="button-content">
-                <a href="https://1lejend.com/stepmail/kd.php?no=ylTjHSUbGk" target="_blank"><button class="btn" id="top-contact-btn" cursor="pointer">お問い合わせをする</button></a>
+      <div class="pattern filter"></div>
+      <div class="top-wrapper">
+        <video src="images/top_movie.mp4"　alt="images/top_sp.jpg" autoplay loop>
+        </video>
+      </div>
+      <div class="wrapper">
+        <div class="inner-bg">
+          <h1 class="shadow type">Just Push<br>the Button<br>to create<br>an exciting memory</h1>
+          <div class="top-contact">
+            <p class="service-content shadow">2016年秋サービスリリース予定<br>現在モニター企業様・自治体様を募集中</p>
+            <div class="button-content">
+              <a href="https://1lejend.com/stepmail/kd.php?no=ylTjHSUbGk" target="_blank"><button class="btn" id="top-contact-btn" cursor="pointer">お問い合わせをする</button></a>
             </div>
           </div>
         </div>
@@ -239,6 +239,7 @@
           </div>
         </div>
       </div>
+    </section>
       <footer class="main_footer">
     		<div class="container">
           <div class="footer_logo_ourshot"><a href="#top"><img src="images/footer_logo.png" alt="Logo"></a></div>
