resize container width and fix query

--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
           <p class="bottom-service-content shadow">2016年秋リリース<br>現在モニター企業様・自治体様を募集しております</p>
           <div class="general-button">
             <a href="https://1lejend.com/stepmail/kd.php?no=ylTjHSUbGk" target="_blank">
-              <!-- <div class="button-content-bottom">
+              <div class="button-content-bottom">
                 <button class="btn" id ="bottom-contact-btn">お問い合わせをする</button>
-              </div> -->
+              </div>
             </a>
           </div>
         </div>
