--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
       <div class="wrapper">
         <div class="inner-bg">
           <h1 class="shadow type">Just Push<br>the Button<br>to create<br>an exciting memory</h1>
-          <div class="top-contact">
+          <!-- <div class="top-contact">
             <p class="service-content shadow">2016年秋サービスリリース予定<br>現在モニター企業様・自治体様を募集中</p>
             <div class="button-content">
-              <a href="https://1lejend.com/stepmail/kd.php?no=ylTjHSUbGk" target="_blank"><button class="btn" id="top-contact-btn" cursor="pointer">お問い合わせをする</button></a>
-            </div>
+              <a href="" target="_blank"><button class="btn" id="top-contact-btn" cursor="pointer">お問い合わせをする</button></a>
+            </div> -->
           </div>
         </div>
       </div>
