fix style in footer

--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
         </div>
       </div>
     </section>
+
     <section id="contact">
       <div class="wrapper">
         <h2 class="heading">Contact</h2>
@@ -235,17 +236,15 @@
     </section>
     <footer class="main_footer">
   		<div class="container">
-        <div class="footer_logo_ourshot"><a href="#top"><img src="images/footer_logo.png" alt="Logo"></a></div>
-  			<div class="footer_logo"><a href="http://www.hackcamp.jp/" id="hc-logo"><img src="images/HackCamp-icon.png" alt="HackCamp logomark"></a></div>
+  			<div class="footer_logo_ourshot"><a href="#top"><img src="images/ourshot-logo-white.png"></a></div>
   			<nav class="footer_nav">
   				<ul>
   					<li><a href="#top">ホーム</a></li>
-  					<li><a href="http://www.hackcamp.jp/#company_info">会社概要</a></li>
   					<li><a href="https://1lejend.com/stepmail/kd.php?no=ylTjHSUbGk" target="_blank">お問い合わせ</a></li>
   				</ul>
   			</nav>
   		</div>
-      <small class="copyright">HackCamp © 2016 All Rights Reserved.</small>
+      <small class="copyright">ourshot © 2016 All Rights Reserved.</small>
 	   </footer>
      <script type="text/javascript" src="js/script.js"></script>
      <script type="text/javascript" src="js/t.min.js"></script>
